# cowstrikesback

./: CMakeLists.txt  Cow.cpp  Cow.h  Dragon.cpp  Dragon.h  HeiferGenerator.cpp  HeiferGenerator.h  IceDragon.cpp  IceDragon.h  cowsay.cpp
